--- a/public/style.css
+++ b/public/style.css
@@ -3,4 +3,4 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 .number { color: darkorange; }
 .boolean { color: blue; }
 .null { color: magenta; }
-.key { color: red; }
+.key { color: black; }
